src/objects/Client_Handoff_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Account_Health_Notes__c</fullName>
        <formula>Account__r.Client_Risk_Notes__c</formula>
        <label>Account Health Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Health_Score__c</fullName>
        <formula>TEXT(Account__r.Client_Risk__c)</formula>
        <label>Account Health Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName +&apos; &apos;+ Account__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Handoff Summary</relationshipLabel>
        <relationshipName>Client_Handoff_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Details_Account_Contract__c</fullName>
        <label>Additional Details - Account &amp; Contract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_Account_Management__c</fullName>
        <label>Additional Details - Account Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_BH__c</fullName>
        <label>Additional Details - BH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_DM__c</fullName>
        <label>Additional Details - DM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_DPP__c</fullName>
        <label>Additional Details - DPP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_HTN__c</fullName>
        <label>Additional Details - HTN</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_Marketing__c</fullName>
        <label>Additional Details - Marketing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_Reporting__c</fullName>
        <label>Additional Details - Reporting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_WM__c</fullName>
        <label>Additional Details - WM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Box_Link_for_Legal_Documents__c</fullName>
        <label>Box Link for Legal Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_reviews_available_on_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business reviews available on Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_reviews_discussed__c</fullName>
        <label>Business reviews discussed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Frequency__c</fullName>
        <label>Call Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Implementation_Manager__c</fullName>
        <formula>Account__r.Client_Implementation_Manager__r.FirstName +&apos; &apos;+
Account__r.Client_Implementation_Manager__r.LastName</formula>
        <label>Client Implementation Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Must_Approve_Assets__c</fullName>
        <formula>TEXT(Client_Overview__r.Client_Must_Approve_Assets__c)</formula>
        <label>Client Must Approve Assets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Overview</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Client Handoff Summary</relationshipLabel>
        <relationshipName>Client_Handoff_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Success_Manager__c</fullName>
        <formula>Account__r.CSM__r.FirstName +&apos; &apos;+
Account__r.CSM__r.LastName</formula>
        <label>Client Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Data_Sharing_and_Access__c</fullName>
        <formula>IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;None&quot;), &quot;None; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Clinical Portal - Care Coordination&quot;), &quot;Clinical Portal - Care Coordination; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Clinical Portal - Shared Coaching&quot;), &quot;Clinical Portal - Shared Coaching; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Reporting/File Share&quot;), &quot;Reporting/File Share; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;API Integration&quot;), &quot;API Integration; &quot;, NULL)</formula>
        <label>Clinical Data Sharing and Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Model__c</fullName>
        <formula>TEXT(Client_Overview__r.Clinical_Model__c)</formula>
        <label>Clinical Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Referrals__c</fullName>
        <formula>TEXT(Client_Overview__r.Clinical_Referrals__c)</formula>
        <label>Clinical Referrals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <formula>TEXT(Client_Overview__r.Contract_Effective_Date__c)</formula>
        <label>Contract Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Path__c</fullName>
        <formula>Client_Overview__r.Contract_Path__r.Name</formula>
        <label>Contract Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(Client_Overview__r.Contract_Type__c)</formula>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sharing_Agreement_Document__c</fullName>
        <formula>TaskRay_Project__r.Data_Sharing_Agreement_Document__c</formula>
        <label>Data Sharing Agreement Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_we_receive_Emails__c</fullName>
        <label>Do we receive Emails?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Verification_Method__c</fullName>
        <formula>TEXT(Client_Overview__r.Eligibility_Verification_Method__c)</formula>
        <label>Eligibility Verification Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <label>Email Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Lead__c</fullName>
        <formula>Account__r.EML__r.FirstName +&apos; &apos;+
Account__r.EML__r.LastName</formula>
        <label>Enrollment Marketing Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_does_Client_Define_Success__c</fullName>
        <label>How does Client Define Success?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Assets__c</fullName>
        <label>Launch Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_legal_documents__c</fullName>
        <label>List legal documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Livongo_Incentive_for_Automation__c</fullName>
        <formula>TEXT(Client_Overview__r.Livongo_Incentive_for_Automation__c)</formula>
        <label>Livongo Incentive for Automation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Livongo_Led__c</fullName>
        <formula>Client_Overview__r.Livongo_Led__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Livongo Led?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <formula>Client_Overview__r.Marketing_Name__c</formula>
        <label>Marketing Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Stratification__c</fullName>
        <formula>TEXT(Client_Overview__r.Outreach_Stratification__c)</formula>
        <label>Outreach Stratification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_of_Coverage__c</fullName>
        <formula>IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Employees&quot;), &quot;Employees; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Spouse&quot;), &quot;Spouse; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Dependents U18&quot;), &quot;Dependents U18; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Dependents 18+&quot;), &quot;Dependents 18+; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Employees w/o Medical&quot;), &quot;Employees w/o Medical; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Patients&quot;), &quot;Patients; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Retirees&quot;), &quot;Retirees; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Secondary Insurance&quot;), &quot;Secondary Insurance; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Direct to Consumer (D2C)&quot;), &quot;Direct to Consumer (D2C); &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Pre-65 Retirees&quot;), &quot;Pre-65 Retirees; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Cobra&quot;), &quot;Cobra; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Diabetes Under 13&quot;), &quot;Diabetes Under 13; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Union Population&quot;), &quot;Union Population; &quot;, NULL)</formula>
        <label>Population of Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Automation__c</fullName>
        <formula>Client_Overview__r.Ready_for_Automation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <formula>TEXT(TaskRay_Project__r.Reporting_Frequency__c)</formula>
        <label>Reporting Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Method_of_Delivery__c</fullName>
        <formula>TEXT(TaskRay_Project__r.Reporting_Method_of_Delivery__c)</formula>
        <label>Reporting Method of Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Type_Detail__c</fullName>
        <formula>TEXT(TaskRay_Project__r.Report_Type_Detail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Type Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <formula>TEXT(TaskRay_Project__r.Report_Request_Type__c)</formula>
        <label>Reporting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecards_available_on_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecards available on Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskRay_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Client Handoff Summary</relationshipLabel>
        <relationshipName>Client_Handoff_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Handoff Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHS# {00000}</displayFormat>
        <label>Client Handoff Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Handoff Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>